# channeler

./: .gitlab-ci.yml  README.md  android.py  build-config.h.in  flake.nix  meson.build  protoid.py
docs/: architecture.md  channeler_introduction.odp
include/: channeler.h
include/channeler/: capabilities.h  channelid.h  cookie.h  error.h  message.h  packet.h  peerid.h  protoid.h  version.h  visibility.h
lib/: channel_data.h  channelid.cpp  channels.h  context.h  cookie.cpp  error.cpp  lock_policy.h  macros.h  message.cpp  packet.cpp  peerid.cpp  version.cpp
lib/context/: connection.h  context.h  node.h
lib/fsm/: base.h  channel_initiator.h  channel_responder.h  data.h  default.h  registry.h
lib/internal/: api.h
lib/memory/: packet_block.h  packet_buffer.h  packet_pool.h
lib/pipe/: action.h  add_checksum.h  callback.h  channel_assign.h  de_envelope.h  egress.h  enqueue_message.h  event.h  event_as.h  filter_classifier.h  ingress.h  message_bundling.h  message_parsing.h  out_buffer.h  route.h  state_handling.h  validate.h
lib/pipe/egress/: add_checksum.h  callback.h  enqueue_message.h  message_bundling.h  out_buffer.h
lib/pipe/ingress/: channel_assign.h  de_envelope.h  message_parsing.h  route.h  state_handling.h  validate.h
lib/support/: exponential_backoff.h  random_bits.h  timeouts.h
subprojects/: .gitignore  packeteer.wrap
test/: byte_suffix.h  env.h  hexdump.cpp  hexdump.h  meson.build  messages.cpp  messages.h  packets.cpp  packets.h  runner.cpp  temp_buffer.h
test/private/: channels.cpp
test/private/fsm/: channel_initiator.cpp  channel_responder.cpp  data.cpp  default.cpp  registry.cpp
test/private/internal/: api.cpp
test/private/memory/: packet_block.cpp  packet_buffer.cpp  packet_pool.cpp
test/private/pipe/: add_checksum.cpp  callback.cpp  channel_assign.cpp  de_envelope.cpp  egress.cpp  enqueue_message.cpp  ingress.cpp  message_bundling.cpp  message_parsing.cpp  out_buffer.cpp  route.cpp  state_handling.cpp  validate.cpp
test/private/pipe/egress/: add_checksum.cpp  callback.cpp  enqueue_message.cpp  message_bundling.cpp  out_buffer.cpp
test/private/pipe/ingress/: channel_assign.cpp  de_envelope.cpp  message_parsing.cpp  route.cpp  state_handling.cpp  validate.cpp
test/private/support/: exponential_backoff.cpp  timeouts.cpp
test/public/: channelid.cpp  cookie.cpp  message.cpp  packet.cpp  peerid.cpp
